--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,23 @@
 		<title>Vanilla Devserver Boilerplate</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="user-scalable=no, initial-scale=1, width=device-width, height=device-height" />
+		<link href="https://fonts.googleapis.com/css?family=Merriweather|Merriweather+Sans&display=swap" rel="stylesheet" />
 		<!--Ensures proper display in Chrome dev tool's device emulator-->
 	</head>
 
 	<body>
-		<div id="app"></div>
+		<header class="header">
+			<div class="header__profile"></div>
+			<nav class="header__menu">
+				<ul class="menu__list">
+					<li class="menu__link">Home</li>
+					<li class="menu__link">Stories</li>
+					<li class="menu__link">About</li>
+					<li class="menu__link">Blog</li>
+					<li class="menu__link">Contact</li>
+				</ul>
+			</nav>
+		</header>
+		<main class="content"></main>
 	</body>
 </html>
