--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,20 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Vanilla Devserver Boilerplate</title>
+		<title>KR Monin</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="user-scalable=no, initial-scale=1, width=device-width, height=device-height" />
-		<link href="https://fonts.googleapis.com/css?family=Merriweather|Merriweather+Sans&display=swap" rel="stylesheet" />
 		<!--Ensures proper display in Chrome dev tool's device emulator-->
+		<link href="https://fonts.googleapis.com/css?family=Merriweather|Merriweather+Sans&display=swap" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css?family=Lato:300,400&display=swap" rel="stylesheet" />
+		<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css" />
 	</head>
 
 	<body>
 		<header class="header">
 			<div class="header__profile"></div>
-			<nav class="header__menu">
+			<div class="header__social"></div>
+			<nav class="header__menu menu">
 				<ul class="menu__list">
 					<li class="menu__link">Home</li>
 					<li class="menu__link">Stories</li>
